--- a/Views/Escuela/Index.cshtml
+++ b/Views/Escuela/Index.cshtml
@@ -1,10 +1,16 @@
 ﻿@model Escuela
 @{
-    ViewData["Title"] = "Información escuela";
+    ViewData["Title"] = "Información Escuela";
 }
 
 
-<h1>Escuela @ViewData["Title"] </h1>
+<h1>@ViewData["Title"] </h1>
 <h2>Nombre: @Model.Nombre </h2>
-<p><strong>Año fundación: @Model.AnioFundacion</strong></p>
+<h3>Tipo de Escuela: @Model.TipoEscuela </h3>
+<address>
+    <p>Dirección: @Model.Dirección</p>
+    <p>País: @Model.Pais</p>
+    <p>Ciudad: @Model.Ciudad</p>
+</address>
+<p><strong>Año fundación: @Model.AñoDeCreación</strong></p>
 <p><i>@ViewBag.CosaDinamica  </i></p>
