--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -11,7 +11,7 @@
 
 @foreach (var asignatura in Model)
 {
-    <partial name= "AsignaturaSimple" model = "asignatura"/>
+    <partial name= "ObjetoEscuelaSimple" model = "asignatura"/>
 }
 
 <p><i>@ViewBag.Fecha </i></p>
