agregando entity framework

--- a/Views/Asignatura/MultiAsignatura.cshtml
+++ b/Views/Asignatura/MultiAsignatura.cshtml
@@ -9,9 +9,6 @@
 
 <strong> Desde la vista parcial</strong>
 
-@foreach (var asignatura in Model)
-{
-    <partial name= "ObjetoEscuelaSimple" model = "asignatura"/>
-}
+<partial name= "ListaObjetoEscuela"></partial>
 
 <p><i>@ViewBag.Fecha </i></p>
