--- a/Views/Asignatura/Index.cshtml
+++ b/Views/Asignatura/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Alumno
+﻿@model Asignatura
 @{
     ViewData["Title"] = "Información Asignatura";
     Layout = "Simple";
@@ -10,7 +10,7 @@
 <strong> Desde la vista normal</strong>
 <p>
     Nombre: @Model.Nombre <br/>
-    Id: @Model.UniqueId
+    Id: @Model.Id
 </p>
 
 <strong> Desde la vista parcial</strong>
